<resources>


    <string name="s_brand">Brand</string>
    <string name="s_model">Model</string>
    <string name="s_transmission">Transmission</string>
    <string name="s_ModYear">Model Year</string>
    <string name="s_mileage">Mileage</string>
    <string name="s_fuel">Fuel Type</string>
    <string name="s_contact">Contact Number</string>
    <string name="s_policy">Agree to the Terms and Privacy Policy</string>
    <string name="s_add">Add</string>
    <string name="s_car1make">Toyota Corolla 21,000,000/=</string>
    <string name="s_car2make">Honda Insight 35,000,000/=</string>
    <string name="s_car3make">Nissan Sunny 18,000,000/=</string>
    <string name="s_contact_number">Contact Number : 0715628422</string>
    <string name="s_update">Update</string>


    <string name="register_here">Register Here</string>
    <string name="register_with_us_for_free">Register With Us For Free!</string>
    <string name="full_name">Full Name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login_here">Already Registered?Login Here</string>
    <string name="check_your_details">Check Your Details</string>
    <string name="sanduni_aloki">Sanduni Aloki</string>
    <string name="_0711479675">0711479675</string>
    <string name="san98_gmail_com">san98@gmail.com</string>
    <string name="_146_1_athurugiriya_malabe">146/1,Athurugiriya,Malabe</string>
    <string name="sandlok">sandlok</string>
    <string name="_98sanlok">98sanlok</string>
    <string name="cancle">Cancel</string>
    <string name="change_deatils">Change Details</string>
    <string name="confirm">Confirm</string>
    <string name="card_type">Card Type</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="exp_month_year">Exp : Month/Year</string>
    <string name="month_year">Month/Year</string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="holder_name">Holder Name</string>
    <string name="cancel">Cancel</string>
    <string name="proceed_payment">Proceed Payment</string>
    <string name="payment_process">Payment Process</string>
    <string name="checkout_your_payment">Checkout Your Payment</string>
    <string name="name">Name</string>
    <string name="_1234_5678_9012_5643">1234 5678 9012 5643</string>
    <string name="_1_2_3">1 2 3</string>
    <string name="_03_21">03/21</string>
    <string name="visa">VISA</string>
    <string name="edit_details">Edit Details</string>
    <string name="pay">Pay</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="cancel2">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="Txt1">Car Mart</string>
    <string name="button1">Login</string>
    <string name="button2">Register</string>
    <string name="button3">Search A Car</string>
    <string name="button4">Notices</string>
    <string name="button5">Buy A Car</string>
    <string name="button6">Sell A Car</string>
    <string name="button7">Order A BrandNew Car</string>
    <string name="button8">Fill the forum to Order</string>
    <string name="button9">Name of the Car :</string>
    <string name="button10">Car Model :</string>
    <string name="button11">Model Year :</string>
    <string name="button12">Car Brand :</string>
    <string name="button13"> </string>
    <string name="button14">Car Colour :</string>
    <string name="button15">Cancel</string>
    <string name="button16">Proceed to Checkout</string>
    <string name="button17">Types of Cars</string>
    <string name="button18">Seedan</string>
    <string name="button19">Coupe</string>
    <string name="button20">SUV</string>
    <string name="button21">Sports</string>
    <string name="button22">Edit</string>
    <string name="button23">Proceed to Payment</string>

    <string name="edit_notice">EDIT NOTICE</string>
    <string name="notice_id">Notice ID</string>
    <string name="search">n_search</string>
    <string name="app_name">CarMart - Vehicle App Notices</string>
    <string name="n_edit_notice">Edit Notice</string>
    <string name="n_edit_information">Edit Information</string>
    <string name="n_edit_heading">Edit Heading</string>
    <string name="n_notice_id">Notice ID</string>
    <string name="n_edit_name">Edit Name</string>
    <string name="n_change_mobile">Change Mobile</string>
    <string name="n_change_e_mail">Change E-mail</string>
    <string name="n_change_notice_information">Change Notice Information</string>
    <string name="n_search">Search</string>
    <string name="n_heading_of_notice">Heading of Notice</string>
    <string name="n_person_name">Person Name</string>
    <string name="n_phone">Phone</string>
    <string name="n_e_mail">E-mail</string>
    <string name="n_notice">Notice</string>
    <string name="n_notice_information">Notice Information</string>
    <string name="n_enter_a_heading">Enter a Heading</string>
    <string name="n_enter_name">Enter Name</string>
    <string name="n_enter_mobile">Enter Mobile</string>
    <string name="n_enter_e_mail">Enter E-mail</string>
    <string name="n_n_notice_id_edit">Notice ID</string>
    <string name="notices">Notices</string>


    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="noticeerror">Enter a valid notice</string>
    <string name="n_enter_price">price</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_mobile">Please Enter a Valid Number</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_notice">Please enter Notice Information</string>
    <string name="enter_province">Enter Province</string>
    <string name="channel_description">channel Description</string>
    <string name="channel_name">channel name</string>
    <string name="saveInfoBt">Add Notice</string>
    <string name="province">Enter Province</string>



</resources>