<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:orientation="vertical"
    tools:context=".Homepage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="337dp"
        android:layout_height="157dp"
        android:layout_marginBottom="686dp"
        android:background="@drawable/carbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/button1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="20dp"
        android:text="@string/button2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/Txt1"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="147dp"
        android:layout_height="32dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="156dp"
        android:background="#D3CFCF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="279dp"
        android:layout_marginTop="228dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3">

        <Button
            android:id="@+id/button10"
            android:layout_width="332dp"
            android:layout_height="37dp"
            android:background="@android:color/black"
            android:fontFamily="@font/aclonica"
            android:text="@string/button3"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/notices"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            android:layout_width="329dp"
            android:layout_height="38dp"
            android:background="@android:color/black"
            android:fontFamily="@font/aclonica"
            android:text="@string/button5"
            android:textColor="#FAF7F7"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button13"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/button6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button14"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:fontFamily="@font/aclonica"
            android:text="@string/button7"
            android:textColor="#F6F0F0"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>